AGRE-2090: Moved best contact time property to ServiceResult, removed unused serviceId field
(cherry picked from commit 75ff84635753b0de7e7d536b102a98d18f7101bc)
